--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.rbxl
 *.rbxlx
 *.rbxm
-*.rbxmx
+#*.rbxmx
 
 # Roblox backup autosaves
 *.rbxl.autosave
@@ -26,7 +26,7 @@ Builds/
 # Ignore thumbnails/screenshots if you keep them in repo
 *.png
 *.jpg
-*.jpeg
+#*.jpeg
 *.gif
 
 # IDE/editor cruft
